Updated API